--- a/112705001_Rory/HW0526/C15S07Q11.md
+++ b/112705001_Rory/HW0526/C15S07Q11.md
@@ -1,1 +1,63 @@
+## Question
+
+<img width="400" alt="image" src="https://github.com/user-attachments/assets/b7f13e9e-fce6-4b6d-8ca7-ac1d5af95a48" />
+
+## Solution
+
+### a.
+
+|rank| A | B |
+|:--:|:-:|:-:|
+|    |7.5| 3 |
+|    | 4 | 7 |
+|    | 3 |12 |
+|    |12 | 1 |
+|    | 10| 8 | 
+|    |7.5|11 |
+|    | 6 | 4 |
+|    |11 | 2 |
+|    | 1 |10 | 
+|    | 5 | 9 |
+|    | 9 |5.5|
+|    | 2 |5.5|
+  
+$\sum xy = 422.5 \quad \quad \sum x = 78 \quad \quad \sum y = 78$  
+  
+$\sum x^2 = 649.5 \quad \quad \sum y^2 = 649.5 \quad \quad n = 12$  
+
+$S_{xy} = \sum xy - \frac{\sum x \sum y}{n} = 422.5 - \frac{78*78}{12} = -84.5$  
+  
+$S_{xx} = \sum x^2 - \frac{(\sum x )^2}{n} = 649.5 - \frac{78^2}{12} = 142.5$  
+
+$S_{yy} = \sum y^2 - \frac{(\sum y)^2}{n} = 649.5 - \frac{78^2}{12} = 142.5$ 
+
+$$
+r_s^* = \frac{S_{xy}}{\sqrt{S_{xx}S_{yy}}} = \frac{-84.5}{\sqrt{142.5*142.5}} \approx - 0.59298
+$$
+
+### b.
+
+$H_0: \rho = 0$
+
+$H_a: \rho < 0$
+
+$\alpha = 0.05$
+
+Test statistic:
+
+$$
+r_{s,STAT} = \frac{S_{xy}}{\sqrt{S_{xx}S_{yy}}} \sim \text{check table 9}
+$$
+
+Realized statistic:
+
+$$
+r_s^* = - 0.59298
+$$
+
+Rejection region:  $\\{r\leq -0.497\\}$
+
+Since $-0.59298$ falls into the rejection region, we reject $H_0$, which means the data provide sufficient evidence to indicate a negative rank correlation between rating and distance.
+ 
+
 
