--- a/112705001_Rory/HW0526/C15S06Q11.md
+++ b/112705001_Rory/HW0526/C15S06Q11.md
@@ -14,19 +14,9 @@
 | T4 | 3 | 5 | 5 | 5 | 5 | 4 |
 | T5 | 2 | 1 | 1 | 1 | 1 | 1 |
   
-$T_1 = 18$
+$T_1 = 18 \quad \quad T_2 = 12 \quad \quad T_3 = 26 \quad \quad T_4 = 27 \quad \quad T_5 = 7
 
-$T_2 = 12$
-
-$T_3 = 26$
-
-$T_4 = 27$
-
-$T_5 = 7$  
-
-$b = 6$
-
-$k=5$  
+$b = 6 \quad \quad k=5$  
   
 $H_0$: 5 distributions are identical
 
