--- a/112705001_Rory/HW0526/C15S06Q10.md
+++ b/112705001_Rory/HW0526/C15S06Q10.md
@@ -38,17 +38,9 @@ Use Friedman $F_r$ -test,
 | B4 | 2 | 4 | 1 | 3 |
 | B5 | 3 | 4 | 2 | 1 |
 
-$T_1 = 12$ 
+$T_1 = 12 \quad \quad T_2 = 13 \quad \quad T_3 = 10 \quad \quad T_4 = 15$  
 
-$T_2 = 13$
-
-$T_3 = 10$
-
-$T_4 = 15$  
-
-$b = 5$
-
-$k=4$  
+$b = 5 \quad \quad k=4$
   
 $H_0$: 4 distributions are identical 
 
