--- a/112705001_Rory/HW0519/C15S05Q8.md
+++ b/112705001_Rory/HW0519/C15S05Q8.md
@@ -15,17 +15,9 @@
 | B7 | 3 | 4 | 2 | 1 |
 | B8 | 3 | 4 | 2 | 1 |
 
-$k = 4$
+$T_1 = 23 \quad \quad T_2 = 29.5 \quad \quad T_3 = 19.5 \quad \quad T_4 = 8$
 
-$b = 8$  
-  
-$T_1 = 23$
-
-$T_2 = 29$
-
-$T_3 = 19.5$
-
-$T_4 = 8$  
+$k=4 \quad \quad b=8$
 
 ### a.
 
