--- a/112705001_Rory/HW0526/C15S07Q12.md
+++ b/112705001_Rory/HW0526/C15S07Q12.md
@@ -1,1 +1,56 @@
+## Question
+<img width="300" alt="ch15 7 12" src="https://github.com/user-attachments/assets/a403bdda-c14e-4d9c-8a3d-324408f91c1d" />
 
+
+## Solution
+
+### (a)
+|rank| A | B |
+|:--:|:-:|:-:|
+|    | 7 | 1 |
+|    | 9 | 2 |
+|    |3.5| 3 |
+|    | 6 | 4 |
+|    | 8 | 5 | 
+|    | 5 | 6 |
+|    | 2 | 7 |
+|    |3.5| 8 |
+|    | 1 | 9 | 
+  
+$\sum xy = 180.5 \quad \quad \sum x = 45 \quad \quad \sum y = 45$  
+  
+$\sum x^2 = 284.5 \quad \quad \sum y^2 = 285 \quad \quad n = 9$  
+
+$S_{xy} = \sum xy - \frac{\sum x \sum y}{n} = 180.5 - \frac{45*45}{9} = -44.5$  
+  
+$S_{xx} = \sum x^2 - \frac{(\sum x )^2}{n} = 284.5 - \frac{45^2}{9} = 59.5$  
+
+$S_{yy} = \sum y^2 - \frac{(\sum y)^2}{n} = 285 - \frac{45^2}{9} = 60$ 
+
+$$
+r_s^* = \frac{S_{xy}}{\sqrt{S_{xx}S_{yy}}} = \frac{-44.5}{\sqrt{59.5*60}} \approx - 0.7448
+$$
+
+### b.
+
+$H_0: \rho = 0$
+
+$H_a: \rho \neq 0$
+
+$\alpha = 0.05$
+
+Test statistic:
+
+$$
+r_{s,STAT} = \frac{S_{xy}}{\sqrt{S_{xx}S_{yy}}} \sim \text{check table 9}
+$$
+
+Realized statistic:
+
+$$
+r_s^* = - 0.7448
+$$
+
+Rejection region: $\\{|r| \geq 0.683\\}$
+
+Since $0.7448$ falls into the rejection region, we reject $H_0$, which means the data provide sufficient evidence to indicate a negative rank correlation between the two variables.
