--- a/112705001_Rory/HW0526/C15S07Q12.md
+++ b/112705001_Rory/HW0526/C15S07Q12.md
@@ -31,6 +31,8 @@ $$
 r_s^* = \frac{S_{xy}}{\sqrt{S_{xx}S_{yy}}} = \frac{-44.5}{\sqrt{59.5*60}} \approx - 0.7448
 $$
 
+Therefore, the correlation coefficient is -0.7458
+
 ### b.
 
 $H_0: \rho = 0$
