--- a/112705001_Rory/HW0526/C15S07Q12.md
+++ b/112705001_Rory/HW0526/C15S07Q12.md
@@ -44,7 +44,7 @@ $\alpha = 0.05$
 Test statistic:
 
 $$
-r_{s,STAT} = \frac{S_{xy}}{\sqrt{S_{xx}S_{yy}}} \sim \text{check table 9}
+r_{s,STAT} = \frac{S_{xy}}{\sqrt{S_{xx}S_{yy}}}
 $$
 
 Realized statistic:
