--- a/112705001_Rory/HW0526/C15S07Q11.md
+++ b/112705001_Rory/HW0526/C15S07Q11.md
@@ -35,6 +35,8 @@ $$
 r_s^* = \frac{S_{xy}}{\sqrt{S_{xx}S_{yy}}} = \frac{-84.5}{\sqrt{142.5*142.5}} \approx - 0.59298
 $$
 
+Therefore, the correlation coefficient is -0.59298
+
 ### b.
 
 $H_0: \rho = 0$
@@ -46,7 +48,7 @@ $\alpha = 0.05$
 Test statistic:
 
 $$
-r_{s,STAT} = \frac{S_{xy}}{\sqrt{S_{xx}S_{yy}}} \sim \text{check table 9}
+r_{s,STAT} = \frac{S_{xy}}{\sqrt{S_{xx}S_{yy}}}
 $$
 
 Realized statistic:
