--- a/112705001_Rory/HW0512/C15S02Q11.md
+++ b/112705001_Rory/HW0512/C15S02Q11.md
@@ -30,7 +30,7 @@ Therefore, the rejection region is $\\{x| x \leq 5$ or $x \geq 15\\}$
 Test statistic: 
 
 $$
-Z = \frac{x - 0.5n}{0.5 \sqrt{n}} \sim Z
+z = \frac{x-np}{\sqrt{np(1-p)}} \sim Z
 $$
 
 Realized statistic: 
