--- a/112705001_Rory/HW0512/C15S02Q11.md
+++ b/112705001_Rory/HW0512/C15S02Q11.md
@@ -36,8 +36,8 @@ $$
 Realized statistic: 
 
 $$
-Z = \frac{11 - 0.5 * 20}{0.5 \sqrt{20}} \approx 0.45
-$$  
+z = \frac{11-20 \times 0.5}{\sqrt{20 \times 0.5^2}} = 0.447
+$$
   
 Rejection region: 
 
