--- a/112705001_Rory/HW0512/C15S02Q11.md
+++ b/112705001_Rory/HW0512/C15S02Q11.md
@@ -53,6 +53,8 @@ $$
 \Rightarrow x > 14.3827 \text{ or } x < 5.6173
 $$
 
+Since $0.447 < 5.6173$, we cannot reject the null hypothesis.
+
 ### c.
 
 Since x is integer, we will get the same results from part a and b.
