--- a/112705001_Rory/HW0512/C15S02Q11.md
+++ b/112705001_Rory/HW0512/C15S02Q11.md
@@ -57,4 +57,4 @@ Since $0.447 < 5.6173$, we cannot reject the null hypothesis.
 
 ### c.
 
-Since x is integer, we will get the same results from part a and b.
+Because we both fail to reject the null hypothesis at the α = 0.05 significance level in part a and b, there is insufficient evidence to conclude that one chef consistently gives higher ratings than the other.
