--- a/112705001_Rory/HW0512/C15S04Q09.md
+++ b/112705001_Rory/HW0512/C15S04Q09.md
@@ -28,7 +28,7 @@ Realized statistic: $T = min(T^+, T^-) = min(26.5,1.5) = 1.5$
   
 Rejection region: $\\{T | T \leq 2 \\}$    
   
-Since $1.5 < 2$, we fail to reject $H_0$, which means that there is significant difference between the two populations.
+Since $1.5 < 2$, we reject $H_0$, which means that there is significant difference between the two populations.
 
 ### b.
 
