--- a/112705001_Rory/HW0519/C15S04Q15.md
+++ b/112705001_Rory/HW0519/C15S04Q15.md
@@ -64,4 +64,4 @@ Since $0 < 52$, we reject $H_0$, which means that there is significant differenc
 
 ### c.
 
-Yes, they have the same results.
+Both tests reject the null hypothesis. The consistency between the two tests strengthens the evidence that imagery instructions significantly enhance word recall compared to the absence of such instructions. The uniformly positive differences further underscore the clarity and strength of this effect.
