--- a/112705001_Rory/HW0519/C15S05Q6.md
+++ b/112705001_Rory/HW0519/C15S05Q6.md
@@ -41,6 +41,6 @@ $$
 H^* = \frac{12}{20(20+1)} \* (\frac{86^2}{5} + \frac{61^2}{5} + \frac{41.5^2}{5} + \frac{26^2}{5}) - 3(20+1) \approx 12.09
 $$
 
-Rejection region: $\\{ \chi^2 | \chi^2 >\chi^2_{3;0.01} = 11.3449 \\}$
+Rejection region: $\\{ \chi^2 | \chi^2 >\chi^2_{3;0.01} \approx 11.345 \\}$
 
 Since $12.09$ falls into the rejection region, we reject $H_0$, which means that there is a significant difference in the distribution of times for the four different lengths of instructional time.
