--- a/112705064_Li-Chen/HW0519/C15S06Q10.md
+++ b/112705064_Li-Chen/HW0519/C15S06Q10.md
@@ -14,7 +14,7 @@ Collecting data in that way is able to control for variability among children an
 
 The usual analysis of variance assumptions are that:
 1. Residuals should follow normal distribution.  
-2. For all bk treatment/block combinations, there is a common variance.  
+2. There is a common variance for each treatment group.  
   
 For the normal probability plot, the points lie very close to the line and there are no outliers. Therefore, the residuals are approximately normally distributed.   
 
