--- a/112705020_Jamie/HW0519/C15S04Q11.md
+++ b/112705020_Jamie/HW0519/C15S04Q11.md
@@ -1,1 +1,3 @@
 by 喻潔美, Jamie Yuh
+
+<img width="841" alt="image" src="https://github.com/user-attachments/assets/d7f259b9-b87e-4ae7-917f-1a1e1db22ca0" />
