--- a/112705001_Rory/HW0519/C15S05Q8.md
+++ b/112705001_Rory/HW0519/C15S05Q8.md
@@ -30,7 +30,7 @@ $\alpha = 0.05$
 Test statistic:
 
 $$
-F_{r,STAT} = \frac{12}{bk(k+1)} \left( \sum_{i=1}^k T_i^2 \right) - 3b(k+1) \sim \chi^2_{(k-1)}
+H_{STAT} = \frac{12}{n(n+1)} \sum \frac{T_i^2}{n_i} - 3(n+1) \sim \chi^2_{(k-1)}
 $$
 
 Realized statistic:
