--- a/112705001_Rory/HW0519/C15S05Q8.md
+++ b/112705001_Rory/HW0519/C15S05Q8.md
@@ -4,16 +4,12 @@
 
 ## Solution
 
-|rank| T1| T2| T3| T4|
-|:--:|:-:|:-:|:-:|:-:|
-| B1 | 4 | 3 | 2 | 1 |
-| B2 |3.5|3.5| 2 | 1 |
-| B3 |2.5| 4 |2.5| 1 |
-| B4 | 3 | 4 | 2 | 1 |
-| B5 | 2 |3.5|3.5| 1 |
-| B6 | 2 |3.5|3.5| 1 |
-| B7 | 3 | 4 | 2 | 1 |
-| B8 | 3 | 4 | 2 | 1 |
+| Group | Rank Sum |
+| ----- | ------------- |
+| 10–19 | 263           |
+| 20–39 | 210           |
+| 40–59 | 228           |
+| 60–69 | 239           |
 
 $T_1 = 23 \quad \quad T_2 = 29.5 \quad \quad T_3 = 19.5 \quad \quad T_4 = 8$
 
@@ -36,7 +32,7 @@ $$
 Realized statistic:
 
 $$
-F_r^* = \frac{12}{8*4\*5} (23^2 + 29.5^2 + 19.5^2+ 8^2) - 3\*8\*5 = 18.2625
+H=\frac{12}{N(N+1)} \sum(\frac{T_i^2}{n_i}) -3(N+1) = \frac{12}{40(40+1)} (\frac{263^2}{10}+\frac{210^2}{10}+\frac{228^2}{10}+\frac{239^2}{10})-3(40+1) \approx 39.6
 $$
 
 Rejection region: $\\{F_r: F_r > \chi^2_{3;0.05} =  7.81473\\}$
