--- a/112705001_Rory/HW0519/C15S05Q8.md
+++ b/112705001_Rory/HW0519/C15S05Q8.md
@@ -11,10 +11,6 @@
 | 40–59 | 228           |
 | 60–69 | 239           |
 
-$T_1 = 23 \quad \quad T_2 = 29.5 \quad \quad T_3 = 19.5 \quad \quad T_4 = 8$
-
-$k=4 \quad \quad b=8$
-
 ### a.
 
 $H_0$: 4 distributions are identical
@@ -32,7 +28,7 @@ $$
 Realized statistic:
 
 $$
-H=\frac{12}{N(N+1)} \sum(\frac{T_i^2}{n_i}) -3(N+1) = \frac{12}{40(40+1)} (\frac{263^2}{10}+\frac{210^2}{10}+\frac{228^2}{10}+\frac{239^2}{10})-3(40+1) \approx 39.6
+H = \frac{12}{40(40+1)} (\frac{263^2}{10}+\frac{210^2}{10}+\frac{228^2}{10}+\frac{239^2}{10})-3(40+1) \approx 39.6
 $$
 
 Rejection region: $\\{F_r: F_r > \chi^2_{3;0.05} =  7.81473\\}$
