--- a/112705020_Jamie/HW0519/C15S05Q6.md
+++ b/112705020_Jamie/HW0519/C15S05Q6.md
@@ -1,1 +1,3 @@
 by 喻潔美, Jamie Yuh
+
+<img width="794" alt="image" src="https://github.com/user-attachments/assets/470c6693-97db-49db-a0df-76f30fa58360" />
