--- a/112705020_Jamie/HW0519/C15S05Q8.md
+++ b/112705020_Jamie/HW0519/C15S05Q8.md
@@ -1,1 +1,3 @@
 by 喻潔美, Jamie Yuh
+
+<img width="845" alt="image" src="https://github.com/user-attachments/assets/d04ac7fb-d5e5-4a0a-8866-81e8036f9dcf" />
