--- a/112705001_Rory/HW0519/C15S05Q8.md
+++ b/112705001_Rory/HW0519/C15S05Q8.md
@@ -33,7 +33,7 @@ $$
 H = \frac{12}{40(40+1)} (\frac{263^2}{10}+\frac{210^2}{10}+\frac{228^2}{10}+\frac{239^2}{10})-3(40+1) \approx 39.6
 $$
 
-Rejection region: $\\{F_r: F_r > \chi^2_{3;0.05} =  7.81473\\}$
+Rejection region: $\\{ \chi^2 | \chi^2 >\chi^2_{3;0.01} \approx 11.345 \\}$
 
 Since $18.2625$ falls into the rejection region, we reject $H_0$, which means there is significant difference between the distribution of the prices.
 
