--- a/112705020_Jamie/HW0526/C15S06Q11.md
+++ b/112705020_Jamie/HW0526/C15S06Q11.md
@@ -1,1 +1,3 @@
 by 喻潔美, Jamie Yuh
+
+<img width="962" alt="image" src="https://github.com/user-attachments/assets/1b373aa2-2c2c-4fad-a893-006734645830" />
