--- a/112705020_Jamie/HW0526/C15S07Q11.md
+++ b/112705020_Jamie/HW0526/C15S07Q11.md
@@ -1,1 +1,3 @@
 by 喻潔美, Jamie Yuh
+
+<img width="940" alt="image" src="https://github.com/user-attachments/assets/c5446255-d533-4f7b-888f-7db9b8269100" />
