--- a/112705020_Jamie/HW0526/C15S07Q12.md
+++ b/112705020_Jamie/HW0526/C15S07Q12.md
@@ -1,1 +1,3 @@
 by 喻潔美, Jamie Yuh
+
+<img width="958" alt="image" src="https://github.com/user-attachments/assets/4d960fb8-5682-4633-9979-ab59169efb13" />
