--- a/112705001_Rory/HW0519/C15S05Q8.md
+++ b/112705001_Rory/HW0519/C15S05Q8.md
@@ -35,11 +35,37 @@ $$
 
 Rejection region: $\\{ \chi^2 | \chi^2 >\chi^2_{3;0.01} \approx 11.345 \\}$
 
-Since $18.2625$ falls into the rejection region, we reject $H_0$, which means there is significant difference between the distribution of the prices.
+Since $39.6$ falls into the rejection region, we reject $H_0$, which means there is significant difference between the distribution of the prices.
 
 
 ### b.
 
-$p-value = P(F_r > 18.2625) < 0.005 < 0.05 = \alpha$
+$p-value = P(F_r > 18.2625) << 0.05 = \alpha$
 
 Therefore, we reject $H_0$, which means there is significant difference between the distribution of the prices.
+
+### c.
+
+$$
+SSB = \sum n_i (\bar{X}_i - \bar{X}_{\text{total}})^2 = 10 \left[ (30.9-29.025)^2 + \cdots + (28.2-29.025)^2 \right] = 10 \times 8.945 = 89.45
+$$
+
+$$
+SST = SSB + SSW = 89.45 + 800 = 889.45
+$$  
+
+$$
+MSB = \frac{SSB}{k-1} = \frac{89.45}{3} = 29.82
+$$
+
+$$
+MSW = \frac{SSW}{N-k} = \frac{800}{36} = 22.22
+$$ 
+
+$$
+F = \frac{MSB}{MSW} = \frac{29.82}{22.22} \approx 1.34 < 4.38 = critical ~ value
+$$
+
+Therefore, we fail to reject $H_0$.
+
+The discrepancy between the results of the ANOVA (F = 0.87, p = 0.468) and the Kruskal-Wallis test (H = 16.89, p < 0.01) is likely due to a violation of the normality assumption required for ANOVA. Unlike ANOVA, the Kruskal-Wallis test is a non-parametric method that is more robust to non-normal distributions and outliers. As such, it is better suited for analyzing the heart rate data in this context, which may explain why it detected significant differences that ANOVA did not.
