--- a/112705001_Rory/HW0519/C15S05Q8.md
+++ b/112705001_Rory/HW0519/C15S05Q8.md
@@ -47,7 +47,7 @@ Therefore, we reject $H_0$, which means there is significant difference between 
 ### c.
 
 $$
-SSB = \sum n_i (\bar{X}_i - \bar{X}_{\text{total}})^2 = 10 \left[ (30.9-29.025)^2 + \cdots + (28.2-29.025)^2 \right] = 10 \times 8.945 = 89.45
+SSB = \sum n_i (\bar{\chi_i} - \bar{X}_{\text{total}})^2 = 10 \left[ (30.9-29.025)^2 + \cdots + (28.2-29.025)^2 \right] = 10 \times 8.945 = 89.45
 $$
 
 $$
@@ -68,4 +68,4 @@ $$
 
 Therefore, we fail to reject $H_0$.
 
-The discrepancy between the results of the ANOVA (F = 0.87, p = 0.468) and the Kruskal-Wallis test (H = 16.89, p < 0.01) is likely due to a violation of the normality assumption required for ANOVA. Unlike ANOVA, the Kruskal-Wallis test is a non-parametric method that is more robust to non-normal distributions and outliers. As such, it is better suited for analyzing the heart rate data in this context, which may explain why it detected significant differences that ANOVA did not.
+The discrepancy between the results of the ANOVA and the Kruskal-Wallis test may be due to the violation of the normality assumption required for ANOVA. Unlike ANOVA, the Kruskal-Wallis test is a nonparametric method that is more robust to abnormal distributions and outliers. Therefore, it is more suitable for analyzing heart rate data in this case, which may explain why it detects significant differences that ANOVA does not.
