--- a/112705001_Rory/HW0512/C15S02Q11.md
+++ b/112705001_Rory/HW0512/C15S02Q11.md
@@ -53,7 +53,7 @@ $$
 \Rightarrow x > 14.3827 \text{ or } x < 5.6173
 $$
 
-Since $0.447 < 5.6173$, we cannot reject the null hypothesis.
+Since $0.447 < 5.6173$, we fail to reject $H_0$.
 
 ### c.
 
