--- a/112705001_Rory/HW0519/C15S05Q8.md
+++ b/112705001_Rory/HW0519/C15S05Q8.md
@@ -68,4 +68,4 @@ $$
 
 Therefore, we fail to reject $H_0$.
 
-The discrepancy between the results of the ANOVA and the Kruskal-Wallis test may be due to the violation of the normality assumption required for ANOVA. Unlike ANOVA, the Kruskal-Wallis test is a nonparametric method that is more robust to abnormal distributions and outliers. Therefore, it is more suitable for analyzing heart rate data in this case, which may explain why it detects significant differences that ANOVA does not.
+The discrepancy between the results of the ANOVA (F=0.87, p=0.468) and Kruskal-Wallis (H=16.89, p<0.01) test may be due to the violation of the normality assumption required for ANOVA. Unlike ANOVA, the Kruskal-Wallis test is a nonparametric method that is more robust to abnormal distributions and outliers. Therefore, it is more suitable for analyzing heart rate data in this case, which may explain why it detects significant differences that ANOVA does not.
