--- a/112705064_Li-Chen/HW0519/C15S06Q10.md
+++ b/112705064_Li-Chen/HW0519/C15S06Q10.md
@@ -13,8 +13,8 @@ Collecting data in that way is able to control for variability among children an
 ### (b)
 
 The usual analysis of variance assumptions are that:
-1. Residuals should follow normal distribution.  
-2. There is a common variance for each treatment group.  
+1. Data in each treatment should follow normal distribution. $\Rightarrow$  Residuals should follow normal distribution.  
+2. There is a common variance for each treatment group.  $\Rightarrow$  There is a same variance for residuals.  
   
 For the normal probability plot, the points lie very close to the line and there are no outliers. Therefore, the residuals are approximately normally distributed.   
 
