--- a/112705001_Rory/HW0526/C15S06Q10.md
+++ b/112705001_Rory/HW0526/C15S06Q10.md
@@ -30,15 +30,15 @@ In summary, while the assumption of normality is satisfied, the assumption of eq
 
 Use Friedman $F_r$ -test,
 
-|rank| T1| T2| T3| T4|
-|:--:|:-:|:-:|:-:|:-:|
-| B1 | 2 | 1 | 4 | 3 |
-| B2 | 2 | 3 | 1 | 4 |
-| B3 | 3 | 1 | 2 | 4 |
-| B4 | 2 | 4 | 1 | 3 |
-| B5 | 3 | 4 | 2 | 1 |
+| Child | Rank 1 | Rank 2 | Rank 3 | Rank 4 |
+| ----- | ------ | ------ | ------ | ------ |
+| 1     | 3      | 4      | 1      | 2      |
+| 2     | 3      | 2      | 4      | 1      |
+| 3     | 2      | 4      | 3      | 1      |
+| 4     | 3      | 1      | 4      | 2      |
+| 5     | 3      | 1      | 4      | 2      |
 
-$T_1 = 12 \quad \quad T_2 = 13 \quad \quad T_3 = 10 \quad \quad T_4 = 15$  
+$T_1 = 14 \quad \quad T_2 = 12 \quad \quad T_3 = 16 \quad \quad T_4 = 8$  
 
 $b = 5 \quad \quad k=4$
   
@@ -51,15 +51,15 @@ $\alpha = 0.05$
 Test statistic:
 
 $$
-F_{r,STAT} = \frac{12}{bk(k+1)} \left( \sum_{i=1}^k T_i^2 \right) - 3b(k+1) \sim \chi^2_{(k-1)}
+H_{STAT} = \frac{12}{bk(k+1)} \sum(T_i^2) -3b(k+1) \sim \chi^2_{(k-1)}
 $$
 
 Realized statistic:
 
 $$
-F_r^* = \frac{12}{8 * 4\*5} (12^2 + 13^2 + 10^2 + 15^2) - 3\*8\*5 = 1.56
+H^* = \frac{12}{8 * 4\*5} (14^2 + 12^2 + 16^2 + 8^2) - 3\*8\*5 = 4.2
 $$
 
 Rejection region: $\\{F_r: F_r > \chi^2_{3;0.05} = 7.81473 \\}$
 
-Since $1.56$ does not fall into the rejection region, we fail to reject $H_0$, which means that there is no significant difference in the distributions of reponses to the tastes of the four antibiotics.
+Since $4.2$ does not fall into the rejection region, we fail to reject $H_0$, which means that there is no significant difference in the distributions of reponses to the tastes of the four antibiotics.
