--- a/112705001_Rory/HW0526/C15S06Q10.md
+++ b/112705001_Rory/HW0526/C15S06Q10.md
@@ -51,13 +51,13 @@ $\alpha = 0.05$
 Test statistic:
 
 $$
-H_{STAT} = \frac{12}{bk(k+1)} \sum(T_i^2) -3b(k+1) \sim \chi^2_{(k-1)}
+H_{STAT} = \frac{12}{n(n+1)} \sum \frac{T_i^2}{n_i} - 3(n+1) \sim \chi^2_{(k-1)}
 $$
 
 Realized statistic:
 
 $$
-H^* = \frac{12}{8 * 4\*5} (14^2 + 12^2 + 16^2 + 8^2) - 3\*8\*5 = 4.2
+H^* = \frac{12}{5 * 6} (14^2 + 12^2 + 16^2 + 8^2) - 3\*5\*6 = 4.2
 $$
 
 Rejection region: $\\{F_r: F_r > \chi^2_{3;0.05} = 7.81473 \\}$
