--- a/112705001_Rory/HW0526/C15S06Q10.md
+++ b/112705001_Rory/HW0526/C15S06Q10.md
@@ -57,9 +57,9 @@ $$
 Realized statistic:
 
 $$
-F_r^* = \frac{12}{8*4\*5} (14^2 + 12^2 + 16^2 + 8^2) - 3\*8\*5 = 
+F_r^* = \frac{12}{5\*4\*5} (14^2 + 12^2 + 16^2 + 8^2) - 3\*5\*5 = 4.2
 $$
 
-Rejection region: $\\{F_r: F_r > \chi^2_{3;0.05} = 7.81473 \\}$
+Rejection region: $\\{F_r: F_r > \chi^2_{3;0.05} \approx 7.815 \\}$
 
 Since $4.2$ does not fall into the rejection region, we fail to reject $H_0$, which means that there is no significant difference in the distributions of reponses to the tastes of the four antibiotics.
