--- a/112705051_Jerry/Hw0512/C15S02Q13.md
+++ b/112705051_Jerry/Hw0512/C15S02Q13.md
@@ -116,15 +116,30 @@ R.R. = \lbrace S \geq 9 \rbrace
 $$
 
 ### Part (b)
+
+<details>
+  <summary><strong>Difference Chart</strong></summary>
+  
+| Hospital | Drug A Recovery Rate | Drug B Recovery Rate | Difference (B - A) | Sign of differences |
+|----------|--------------------|--------------------|--------------|-------------|
+| 1        | 75.0%              | 85.4%              | +10.4%       | +           |
+| 2        | 69.8%              | 83.1%              | +13.3%       | +           |
+| 3        | 85.7%              | 80.2%              | -5.5%        | -           |
+| 4        | 74.0%              | 74.5%              | +0.5%        | +           |
+| 5        | 69.0%              | 70.0%              | +1.0%        | +           |
+| 6        | 83.3%              | 81.5%              | -1.8%        | -           |
+| 7        | 68.9%              | 75.4%              | +6.5%        | +           |
+| 8        | 77.8%              | 79.2%              | +1.4%        | +           |
+| 9        | 72.2%              | 85.4%              | +13.2%       | +           |
+| 10       | 77.4%              | 80.4%              | +3.0%        | +           |
+
+</details>
+
 The Student's t-test would be inappropriate for this analysis because:
 
 - **Non-Normal Data**: The recovery rates are percentages (bounded between 0-100%) and may not follow a normal distribution, violating a key assumption of the t-test.
   - t-test assumes continuous, normally distributed data, but this study uses recovery rates (percentages), which are proportional data with critical limitations:
     - Bounded range (0%-100%), violating the normal distribution's infinite range assumption
     - Severe skewness when proportions approach 0% or 100%
-      
-- **Paired Binary Outcomes**: The data represents counts of recoveries (binary outcomes) within different sample sizes at each hospital, making the t-test's assumptions about continuous data problematic.
-  - **Heteroscedasticity**: t-test assumes equal variance, but smaller hospitals show greater volatility
-  - **Unequal weighting**: t-test treats all hospitals equally despite reliability differences
 
 - **Small Sample Size**: Since we only have 10 hospitals to compare, the power is limited. Typically, the sample size have to exceed 15 or 20 in order to ensure reliable results and reduce the influence of outliers or random noise.
