--- a/112704036_kc/HW0512/C15S04Q09.md
+++ b/112704036_kc/HW0512/C15S04Q09.md
@@ -1,2 +1,37 @@
 ![image](https://github.com/user-attachments/assets/9f549850-63ed-428e-82d4-4cda21ad4fb3)
 ![image](https://github.com/user-attachments/assets/e4d973a4-ae14-4cf6-8715-a121dde293ba)
+
+
+________
+a.
+
+|Pair| 1 | 2 | 3 | 4  | 5 | 6 | 7 |
+|:--:|:-:|:-:|:-:|:-: |:-:|:-:|:-:|
+|1-2 |0.1|0.7|0.3|-0.1|0.5|0.2|0.5|
+|rank|1.5| 7 | 4 |1.5 |5.5| 3 |5.5|
+  
+$T^+ = 1.5 + 7 + 4 + 5.5 + 3 + 5.5 = 26.5$  
+  
+$T^- = 1.5$  
+  
+1. $H_0 : p=0.5 ; H_a : p ≠ 0.5$  
+   
+2. $\alpha = 0.1$  
+    
+3. test statistic: $T = min(T^+, T^-) , n=7$  
+  
+4. realized statistic: $T = min(T^+, T^-) = min(26.5,1.5) = 1.5$  
+  
+5. $\text{Rejection region: } \\{T | T <= 4 \\}$    
+  
+6. Because $T=1.5 < 4$, reject $H_0$ , which means that there is significant difference between the two populations.
+
+_________
+b.
+
+
+The result of Exercise 4 is not to reject $H_0$. The results of the two tests are different because they are based on different assumptions and information.
+
+The sign test only considers the direction (sign) of the differences and ignores their magnitude or ranking. In contrast, the Wilcoxon signed-rank test takes into account both the sign and the rank of the differences, thereby utilizing more information from the data and providing greater sensitivity to detect true differences.
+
+Therefore, the Wilcoxon signed-rank test is generally more powerful than the sign test. In practice, when the sign test fails to reject $H_0$, the Wilcoxon signed-rank test can be used as a follow-up test to further assess the hypothesis.
