--- a/112705020_Jamie/HW0526/C15S06Q10.md
+++ b/112705020_Jamie/HW0526/C15S06Q10.md
@@ -1,1 +1,3 @@
 by 喻潔美, Jamie Yuh
+
+<img width="648" alt="image" src="https://github.com/user-attachments/assets/5a0506aa-ae9e-44ff-8e27-f30bb32ee452" />
