--- a/史上最強統計學詳解/C15S04Q15.md
+++ b/史上最強統計學詳解/C15S04Q15.md
@@ -18,6 +18,7 @@ Three common procedures for comparing paired data:
 * The data are paired (same student under both conditions) 
 * The paired differences are independent 
 * The differences follow a **normal distribution** 
+![copyImage](https://github.com/user-attachments/assets/62eb9b4e-6f53-40d6-8d43-02400c7aa1b7)
 
 The third assumption is **not satisfied** because the differences appear skewed or unevenly distributed. Therefore, **nonparametric tests** like the **Wilcoxon** or **Sign test** are more appropriate here.
 
