--- a/史上最強統計學詳解/C15S02Q13.md
+++ b/史上最強統計學詳解/C15S02Q13.md
@@ -117,23 +117,8 @@ $$
 
 ### Part (b)
 
-<details>
-  <summary><strong>Difference Chart</strong></summary>
-  
-| Hospital | Drug A Recovery Rate | Drug B Recovery Rate | Difference (B - A) | Sign of differences |
-|----------|--------------------|--------------------|--------------|-------------|
-| 1        | 75.0%              | 85.4%              | +10.4%       | +           |
-| 2        | 69.8%              | 83.1%              | +13.3%       | +           |
-| 3        | 85.7%              | 80.2%              | -5.5%        | -           |
-| 4        | 74.0%              | 74.5%              | +0.5%        | +           |
-| 5        | 69.0%              | 70.0%              | +1.0%        | +           |
-| 6        | 83.3%              | 81.5%              | -1.8%        | -           |
-| 7        | 68.9%              | 75.4%              | +6.5%        | +           |
-| 8        | 77.8%              | 79.2%              | +1.4%        | +           |
-| 9        | 72.2%              | 85.4%              | +13.2%       | +           |
-| 10       | 77.4%              | 80.4%              | +3.0%        | +           |
+<img width="499" alt="image" src="https://github.com/user-attachments/assets/d553f631-a9c5-4a15-a1f2-d20140b65cdc" />
 
-</details>
 
 The Student's t-test would be inappropriate for this analysis because:
 
