--- a/110701081_Cloris/HW0519/C15S04Q11.md
+++ b/110701081_Cloris/HW0519/C15S04Q11.md
@@ -6,3 +6,26 @@
 <img width="400" alt="image" src="https://github.com/user-attachments/assets/cfbac063-9fb9-4d9f-9c46-6ac528fc0157" />
 
 ## Solution
+### a.
+| Pair |  1  |  2  |  3  |  4  |  5  |  6  |  7  |  8  |  9  |
+| :--: | :-: | :-: | :-: | :-: | :-: | :-: | :-: | :-: | :-: |
+|  A-B |  -4 |  2  |  -2 |  -5 |  -3 |  0  |  1  |  1  |  -6 |
+| Rank |  6  | 3.5 | 3.5 |  7  |  5  |  —  | 1.5 | 1.5 |  8  |
+
+$T^+ = 3.5 + 1.5 + 1.5 = 6.5$
+$T^- = 6 + 3.5 + 7 + 5 + 8 = 29.5$
+
+$H_0$: $p = 0.5$
+$H_a$: $p \neq 0.5$
+
+Significance level: $\alpha = 0.05$
+Test statistic: $T = \min(T^+, T^-),\ n = 8$
+
+Observed value: $T = \min(6.5,\ 29.5) = 6.5$
+Rejection region: ${T \mid T \leq 4}$
+
+Since $6.5 > 4$, we fail to reject $H_0$.
+Thus, there is insufficient evidence to conclude a significant difference in the monthly breakdown rates between the two machines.
+
+### b.
+The variation in breakdown rates may be attributed to differences in operational conditions. For instance, the machines might be subjected to varying workloads or handled by different operators, leading to inconsistent wear and stress. Environmental factors such as temperature and humidity could also influence performance from month to month.
