--- a/110701081_Cloris/HW0519/C15S04Q15.md
+++ b/110701081_Cloris/HW0519/C15S04Q15.md
@@ -5,3 +5,49 @@
 <img width="400" alt="image" src="https://github.com/user-attachments/assets/fb5fd320-aa25-463b-be0f-a6f68e1e6235" />
 
 ## Solution
+### a.
+The paired-difference test (parametric), the Wilcoxon signed-rank test (nonparametric), and the sign test are all appropriate methods for evaluating differences in recall scores with and without imagery instructions.
+
+The paired-difference test assumes:
+
+Each observation in one group is uniquely paired with an observation in the other group.
+
+The differences between pairs are independent.
+
+The distribution of differences is approximately normal.
+
+In this case, the first two assumptions are satisfied: each observation is uniquely matched across conditions, and the differences are independent. However, the distribution of the differences appears non-normal, as the values are concentrated at the extremes with fewer mid-range differences. Thus, the normality assumption is violated.
+
+### b.
+| Pair |  1  |  2  |  3  |  4  |  5  |  6  |   7  |  8  |  9  |  10  |  11 |  12 |  13 |  14 |  15 |  16 |  17 |  18 |  19 |  20 |
+| :--: | :-: | :-: | :-: | :-: | :-: | :-: | :--: | :-: | :-: | :--: | :-: | :-: | :-: | :-: | :-: | :-: | :-: | :-: | :-: | :-: |
+|  A-B |  15 |  15 |  15 |  9  |  16 |  8  |  12  |  8  |  10 |  12  |  9  |  4  |  10 |  4  |  17 |  13 |  4  |  7  |  7  |  10 |
+| Rank |  17 |  17 |  17 | 8.5 |  19 | 6.5 | 13.5 | 6.5 |  11 | 13.5 | 8.5 |  2  |  11 |  2  |  20 |  15 |  2  | 4.5 | 4.5 |  11 |
+
+$H_0$: $p = 0.5$
+
+$H_a$: $p \ne 0.5$
+
+Significance level: $\alpha = 0.05$
+
+Test statistic: $x = \text{number of positive signs} = 20$, $n = 20$
+
+$p$-value: $2 \cdot P(X \geq 20) = 2 \cdot (1 - P(X \leq 19)) = 0$
+
+Since $p < 0.05$, we reject $H_0$, indicating a significant difference in recall scores between the two conditions.
+
+Wilcoxon Signed-Rank Test
+$T^+ = 210$, $T^- = 0$
+
+$H_0$: $p = 0.5$
+
+$H_a$: $p \ne 0.5$
+
+Test statistic: $T = \min(T^+, T^-) = 0$
+
+Rejection region: ${T \mid T \leq 52}$
+
+Since $0 < 52$, we reject $H_0$, again suggesting a significant difference in recall scores between the two conditions.
+
+### c.
+Both the sign test and the Wilcoxon signed-rank test reject the null hypothesis, providing consistent evidence that the use of imagery instructions significantly improves recall performance. The fact that all differences are positive further supports the robustness and clarity of this effect.
