--- a/110701081_Cloris/HW0519/C15S05Q6.md
+++ b/110701081_Cloris/HW0519/C15S05Q6.md
@@ -4,3 +4,43 @@
 <img width="400" alt="image" src="https://github.com/user-attachments/assets/dac32ebc-f019-48ab-8690-25238852cf73" />
 
 ## Solution
+| Rank | 0.5 |  1  | 1.5 |  2  |
+| :--: | :-: | :-: | :-: | :-: |
+|      |  13 |  16 |  2  |  2  |
+|      |  20 |  10 | 7.5 |  10 |
+|      |  16 |  5  |  10 |  5  |
+|      |  19 |  13 |  13 |  5  |
+|      |  18 |  16 | 7.5 |  2  |
+
+$T_1 = 13 + 20 + 16 + 19 + 18 = 86$
+
+$T_2 = 16 + 10 + 5 + 13 + 16 = 61$
+
+$T_3 = 2 + 7.5 + 10 + 13 + 7.5 = 41.5$
+
+$T_4 = 2 + 10 + 5 + 5 + 2 = 26$
+
+Let $n = 20$ (total number of observations), and $k = 4$ (number of groups).
+
+Hypothesis
+$H_0$: The four groups follow identical distributions
+
+$H_a$: At least one distribution is different
+
+Significance level: $\alpha = 0.01$
+
+Test statistic:
+
+$$
+H_{STAT} = \frac{12}{n(n+1)} \sum \frac{T_i^2}{n_i} - 3(n+1) \sim \chi^2_{(k-1)}
+$$
+
+Realized staistic:
+
+$$
+H^* = \frac{12}{20(20+1)} \* (\frac{86^2}{5} + \frac{61^2}{5} + \frac{41.5^2}{5} + \frac{26^2}{5}) - 3(20+1) \approx 12.09
+$$
+
+Rejection region: $\\{ \chi^2 | \chi^2 >\chi^2_{3;0.01} \approx 11.345 \\}$
+
+There is sufficient evidence at the 0.01 significance level to conclude that at least one of the four instructional time groups differs significantly in distribution from the others.
