--- a/110701081_Cloris/HW0519/C15S05Q8.md
+++ b/110701081_Cloris/HW0519/C15S05Q8.md
@@ -5,3 +5,75 @@
 <img width="400" alt="image" src="https://github.com/user-attachments/assets/71fbbafc-fffb-4993-a7ba-50b492c3cd67" />
 
 ## Solution
+### a.
+| Group | Rank Sum |
+| ----- | -------- |
+| 10–19 | 263      |
+| 20–39 | 210      |
+| 40–59 | 228      |
+| 60–69 | 239      |
+Total sample size: $n = 40$
+
+Group sizes: $n_1 = n_2 = n_3 = n_4 = 10$
+
+Significance level: $\alpha = 0.05$
+
+Hypotheses:
+
+$H_0$: The distributions of the four groups are identical
+
+$H_a$: At least one distribution differs
+
+Test statistic:
+
+$$
+H_{STAT} = \frac{12}{n(n+1)} \sum \frac{T_i^2}{n_i} - 3(n+1) \sim \chi^2_{(k-1)}
+$$
+
+Realized statistic:
+
+$$
+H = \frac{12}{40(40+1)} (\frac{263^2}{10}+\frac{210^2}{10}+\frac{228^2}{10}+\frac{239^2}{10})-3(40+1) \approx 39.6
+$$
+
+Rejection region: $\\{ \chi^2 | \chi^2 >\chi^2_{3;0.01} \approx 11.345 \\}$
+
+Since $H = 39.6 > 7.815$, we reject $H_0$, concluding that there is a significant difference in the distributions of the four price groups.
+
+### b.
+Given:
+
+$F_{\text{observed}} = 18.26$
+
+$\alpha = 0.05$, and $p \ll 0.05$
+
+Since the observed $F$ value is much greater than the critical value and $p$ is very small, we reject $H_0$.
+This also suggests a significant difference among group means.
+
+### c.
+$$
+SSB = \sum n_i (\bar{\chi_i} - \bar{X}_{\text{total}})^2 = 10 \left[ (30.9-29.025)^2 + \cdots + (28.2-29.025)^2 \right] = 10 \times 8.945 = 89.45
+$$
+
+$$
+SST = SSB + SSW = 89.45 + 800 = 889.45
+$$  
+
+$$
+MSB = \frac{SSB}{k-1} = \frac{89.45}{3} = 29.82
+$$
+
+$$
+MSW = \frac{SSW}{N-k} = \frac{800}{36} = 22.22
+$$ 
+
+$$
+F = \frac{MSB}{MSW} = \frac{29.82}{22.22} \approx 1.34 < 4.38 = critical ~ value
+$$
+
+Critical value for $F_{3,36; 0.05} \approx 2.87$ 
+
+Since $F = 1.34 < 2.87$, we fail to reject $H_0$
+
+We fail to reject $H_0$ based on ANOVA ($F = 0.87$, $p = 0.468$).
+The Kruskal-Wallis test ($H = 16.89$, $p < 0.01$) suggests a significant difference, likely because it does not assume normality and is more robust to outliers, making it more suitable for heart rate data.
