--- a/110701081_Cloris/HW0526/C15S06Q10.md
+++ b/110701081_Cloris/HW0526/C15S06Q10.md
@@ -5,3 +5,53 @@
 <img width="400" alt="image" src="https://github.com/user-attachments/assets/e6b1db57-f5ab-48e5-a977-a3d8ee1ac339" />
 
 ## Solution
+### a.
+A randomized block design was used: five children served as blocks, and four antibiotics as treatments. This design controls for individual differences among children and isolates the effect of the antibiotics.
+
+### b.
+ANOVA assumptions:
+
+Residuals are approximately normally distributed.
+
+Homogeneity of variances across treatment/block combinations.
+
+The normal probability plot shows residuals lie close to the reference line with no outliers, supporting normality.
+However, the residuals vs. antibiotic plot suggests differing variances, especially between Antibiotic 1 and 2, indicating a possible violation of the homogeneity assumption.
+
+Conclusion: Normality is satisfied; equal variances are questionable.
+
+### c.
+| Child | Rank 1 | Rank 2 | Rank 3 | Rank 4 |
+| ----- | ------ | ------ | ------ | ------ |
+| 1     | 3      | 4      | 1      | 2      |
+| 2     | 3      | 2      | 4      | 1      |
+| 3     | 2      | 4      | 3      | 1      |
+| 4     | 3      | 1      | 4      | 2      |
+| 5     | 3      | 1      | 4      | 2      |
+
+$T_1 = 14 \quad \quad T_2 = 12 \quad \quad T_3 = 16 \quad \quad T_4 = 8$  
+
+$b = 5 \quad \quad k=4$
+  
+$H_0$: 4 distributions are identical 
+
+$H_a$: at least one distribution is different
+
+$\alpha = 0.05$
+
+Test statistic:
+
+$$
+F_{r,STAT} = \frac{12}{bk(k+1)} \sum T_i^2 - 3b(k+1) \sim \chi^2_{(k-1)}
+$$
+
+Realized statistic:
+
+$$
+F_r^* = \frac{12}{5\*4\*5} (14^2 + 12^2 + 16^2 + 8^2) - 3\*5\*5 = 4.2
+$$
+
+Rejection region: $\\{F_r: F_r > \chi^2_{3;0.05} \approx 7.815 \\}$
+
+Since $F_r = 4.2 < 7.815$, we fail to reject $H_0$.
+There is no significant difference in the children's taste responses to the four antibiotics.
