--- a/110701081_Cloris/HW0526/C15S06Q11.md
+++ b/110701081_Cloris/HW0526/C15S06Q11.md
@@ -4,3 +4,41 @@
 <img width="400" alt="image" src="https://github.com/user-attachments/assets/1aab288f-23ff-4ec1-850c-447aebd6f491" />
 
 ## Solution
+### a.
+| Rank | B1 | B2 | B3 | B4 | B5 | B6 |
+| ---- | -- | -- | -- | -- | -- | -- |
+| T1   | 4  | 2  | 3  | 3  | 3  | 3  |
+| T2   | 1  | 3  | 2  | 2  | 2  | 2  |
+| T3   | 5  | 4  | 4  | 4  | 4  | 5  |
+| T4   | 3  | 5  | 5  | 5  | 5  | 4  |
+| T5   | 2  | 1  | 1  | 1  | 1  | 1  |
+
+Rank sums:
+$T_1 = 18,\quad T_2 = 12,\quad T_3 = 26,\quad T_4 = 27,\quad T_5 = 7$
+
+Parameters:
+$b = 6$ (blocks), $k = 5$ (treatments)
+
+Hypotheses:
+$H_0$: All treatment distributions are identical
+$H_a$: At least one distribution differs
+
+Test statistic:
+$$
+F_{r,STAT} = \frac{12}{bk(k+1)} \left( \sum_{i=1}^k T_i^2 \right) - 3b(k+1) \sim \chi^2_{(k-1)}
+$$
+
+Realized statistic:
+
+$$
+F_r^* = \frac{12}{6*5 \*6} (18^2 + 12^2 + 26^2 + 27^2 + 7^2) - 3\*6\*6 = 21.466
+$$
+
+Rejection region: $\\{F_r: F_r > \chi^2_{4;0.05} = 9.4877\\}$
+
+Since $F_r = 21.47 > 9.488$, we reject $H_0$.
+There is significant evidence of differences in yield among the five wheat varieties.
+
+### b.
+The ANOVA result ($F = 18.61$, $p \approx 0$) also indicates significant differences.
+The Friedman test, a nonparametric alternative, confirms this result and adds robustness, especially if assumptions like normality or equal variances are questionable. Together, both tests provide strong evidence of differences in wheat yield among the varieties.
