--- a/110701081_Cloris/HW0526/C15S07Q11.md
+++ b/110701081_Cloris/HW0526/C15S07Q11.md
@@ -5,3 +5,56 @@
 <img width="400" alt="image" src="https://github.com/user-attachments/assets/84093f50-dfbd-454d-842c-6dab609a1a87" />
 
 ## Solution
+### a.
+
+|rank| A | B |
+|:--:|:-:|:-:|
+|    |7.5| 3 |
+|    | 4 | 7 |
+|    | 3 |12 |
+|    |12 | 1 |
+|    | 10| 8 | 
+|    |7.5|11 |
+|    | 6 | 4 |
+|    |11 | 2 |
+|    | 1 |10 | 
+|    | 5 | 9 |
+|    | 9 |5.5|
+|    | 2 |5.5|
+  
+$\sum xy = 422.5 \quad \quad \sum x = 78 \quad \quad \sum y = 78$  
+  
+$\sum x^2 = 649.5 \quad \quad \sum y^2 = 649.5 \quad \quad n = 12$  
+
+$S_{xy} = \sum xy - \frac{\sum x \sum y}{n} = 422.5 - \frac{78*78}{12} = -84.5$  
+  
+$S_{xx} = \sum x^2 - \frac{(\sum x )^2}{n} = 649.5 - \frac{78^2}{12} = 142.5$  
+
+$S_{yy} = \sum y^2 - \frac{(\sum y)^2}{n} = 649.5 - \frac{78^2}{12} = 142.5$ 
+
+$$
+r_s^* = \frac{S_{xy}}{\sqrt{S_{xx}S_{yy}}} = \frac{-84.5}{\sqrt{142.5*142.5}} \approx - 0.59298
+$$
+
+Therefore, the correlation coefficient is -0.59298
+
+### b.
+$H_0: \rho = 0$
+
+$H_a: \rho < 0$
+
+$\alpha = 0.05$
+
+Test statistic:
+
+$$
+r_{s,STAT} = \frac{S_{xy}}{\sqrt{S_{xx}S_{yy}}}
+$$
+
+Realized statistic:
+
+$$
+r_s^* = - 0.59298
+$$
+Since $-0.59298$ falls within the rejection region, we reject $H_0$. This indicates that there is sufficient evidence to support a negative rank correlation between rating and distance.
+Rejection region:  $\\{r\leq -0.497\\}$
