--- a/110701081_Cloris/HW0526/C15S07Q12.md
+++ b/110701081_Cloris/HW0526/C15S07Q12.md
@@ -5,3 +5,58 @@
 <img width="400" alt="image" src="https://github.com/user-attachments/assets/399fd00f-807f-4abf-a1c2-0447698201d3" />
 
 ## Solution
+### a.
+| Rank | A   | B |
+| ---- | --- | - |
+|      | 7   | 1 |
+|      | 9   | 2 |
+|      | 3.5 | 3 |
+|      | 6   | 4 |
+|      | 8   | 5 |
+|      | 5   | 6 |
+|      | 2   | 7 |
+|      | 3.5 | 8 |
+|      | 1   | 9 |
+Given:
+$\sum xy = 180.5,\quad \sum x = 45,\quad \sum y = 45$
+$\sum x^2 = 284.5,\quad \sum y^2 = 285,\quad n = 9$
+
+Compute covariance and variances:
+
+$\sum xy = 180.5 \quad \quad \sum x = 45 \quad \quad \sum y = 45$  
+  
+$\sum x^2 = 284.5 \quad \quad \sum y^2 = 285 \quad \quad n = 9$  
+
+$S_{xy} = \sum xy - \frac{\sum x \sum y}{n} = 180.5 - \frac{45*45}{9} = -44.5$  
+  
+$S_{xx} = \sum x^2 - \frac{(\sum x )^2}{n} = 284.5 - \frac{45^2}{9} = 59.5$  
+
+$S_{yy} = \sum y^2 - \frac{(\sum y)^2}{n} = 285 - \frac{45^2}{9} = 60$ 
+
+$$
+r_s^* = \frac{S_{xy}}{\sqrt{S_{xx}S_{yy}}} = \frac{-44.5}{\sqrt{59.5*60}} \approx - 0.7448
+$$
+
+Thus, the Spearman correlation coefficient is approximately -0.745.
+
+### b.
+$H_0$: $\rho = 0$ (no rank correlation)
+
+$H_a$: $\rho \neq 0$ (nonzero rank correlation)
+
+Significance level: $\alpha = 0.05$
+
+Test statistic:
+
+$$
+r_{s,STAT} = \frac{S_{xy}}{\sqrt{S_{xx}S_{yy}}}
+$$
+
+Realized statistic:
+
+$$
+r_s^* = - 0.7448
+$$
+
+Rejection region: $\\{|r| \geq 0.683\\}$
+There is sufficient evidence to suggest a significant negative rank correlation between the two variables.
