--- a/史上最強統計學詳解/C12S04Q08.md
+++ b/史上最強統計學詳解/C12S04Q08.md
@@ -17,3 +17,5 @@ The best estimate of $\sigma^2$ is the **Mean Square Error (MSE)**: $\sigma^2 \a
 The normal probability plot shows a slight departure from normality in the tails.  
 The residual plot may include one unusual point, but no major violations of regression assumptions are evident.  
 Thus, the model appears reasonably appropriate for the data.
+
+reviewed by 黃馨霈 20250527 $\textbf{\textcolor{red}{score: 100}}$
