--- a/史上最強統計學詳解/C12S04Q09.md
+++ b/史上最強統計學詳解/C12S04Q09.md
@@ -29,3 +29,5 @@ Thus, The equal variance assumption also seems not violated.
 
 There is no clear linear trend.  
 Thus, the assumption of linearity appears to be violated.
+
+reviewed by 黃馨霈 20250527 $\textbf{\textcolor{red}{score: 100}}$
