--- a/史上最強統計學詳解/C12S05Q18.md
+++ b/史上最強統計學詳解/C12S05Q18.md
@@ -49,3 +49,5 @@ $x_0 = 0.20$
 $SE_{\hat{y}} = s \cdot \sqrt{ \frac{1}{n} + \frac{(x_0 - \bar{x})^2}{\sum (x_i - \bar{x})^2} } = 12.6264$
 
 $s=\sqrt{\frac{\sum (y_i - \hat{y_i})^2}{n-2}} = 39.04190$
+
+reviewed by 黃馨霈 20250527 $\textbf{\textcolor{red}{score: 100}}$
