--- a/史上最強統計學詳解/C12S06Q13.md
+++ b/史上最強統計學詳解/C12S06Q13.md
@@ -53,3 +53,4 @@ $$
 
 => there is no significant positive correlation between average maximum drill hole depth and average maximum temperature  
 
+reviewed by 黃馨霈 20250527 $\textbf{\textcolor{red}{score: 100}}$
