--- a/史上最強統計學詳解/C12S06Q14.md
+++ b/史上最強統計學詳解/C12S06Q14.md
@@ -16,3 +16,5 @@ let total fat =x, calories=y.
 we can get the $r^2$=0.844
 
 we can see that the r is close to 1, so we can say that the calories and the total fat has high relationship. 
+
+reviewed by 黃馨霈 20250527 $\textbf{\textcolor{red}{score: 100}}$
