--- a/史上最強統計學詳解/C12S06Q15.md
+++ b/史上最強統計學詳解/C12S06Q15.md
@@ -53,3 +53,5 @@ Reject $H_0$ if $t > t_{10,0.025}$ = 2.228
 Since 0.5591 < 2.228, we fail to reject $H_0$.
 
 There is no sufficient evidence to indicate that there is a correlation between these two variables.
+
+reviewed by 黃馨霈 20250527 $\textbf{\textcolor{red}{score: 100}}$
