--- a/史上最強統計學詳解/C14S02Q22.md
+++ b/史上最強統計學詳解/C14S02Q22.md
@@ -24,3 +24,5 @@ $\therefore \ \text{Fail to reject } H_0$
 
 
 There is no significant evidence that heart attack incidence differs by day.
+
+reviewed by 黃馨霈 20250527 $\textbf{\textcolor{red}{score: 100}}$
