--- a/史上最強統計學詳解/C14S04Q12.md
+++ b/史上最強統計學詳解/C14S04Q12.md
@@ -62,3 +62,5 @@ $$ \text{We reject }H_0 $$
 We can say that there is a significant difference in the family size distribution for the three types of residence.
 
 From the table and the expected value $\hat{E}$ , we can observe that the differences come from family with 1 member tends to live in duplex, family members of 2 tends to live in apartment, and family members with 3 or more tends to live in single residence. This cause the difference in family size distribution which is dependent to type of residence.
+
+reviewed by 黃馨霈 20250527 $\textbf{\textcolor{red}{score: 100}}$
