--- a/史上最強統計學詳解/C15S01Q12.md
+++ b/史上最強統計學詳解/C15S01Q12.md
@@ -62,3 +62,5 @@ Pool estimator $S^2 = \frac{(n_1 - 1)s_1^2 + (n_2 - 1)s_2^2}{n_1 + n_2 - 2} = \f
    The data can't provide sufficient evidence to indicate that the mean oxygen content below the town is less than the mean oxygen content above.
 
    The result is consistent with part a.
+
+reviewed by 黃馨霈 20250527 $\textbf{\textcolor{red}{score: 100}}$
