--- a/史上最強統計學詳解/C15S01Q13.md
+++ b/史上最強統計學詳解/C15S01Q13.md
@@ -18,3 +18,5 @@ The critical value of T is for a two-tailed test with α/2 = .025 is T = 62
 
 $T_1 = 45 < 62, Reject H_0,$   
 There's sufficient evidence to indicate the distributions of eye-movement rates for hearing children lies to the left of that for deaf children.
+
+reviewed by 黃馨霈 20250527 $\textbf{\textcolor{red}{score: 100}}$
