--- a/史上最強統計學詳解/C15S02Q11.md
+++ b/史上最強統計學詳解/C15S02Q11.md
@@ -65,3 +65,5 @@ there is no sufficient evidence to indicate that one of the chefs tends to give 
 ### c.
 
 the results of part a. and part b. are the same  
+
+reviewed by 黃馨霈 20250527 $\textbf{\textcolor{red}{score: 100}}$
