--- a/史上最強統計學詳解/C15S02Q13.md
+++ b/史上最強統計學詳解/C15S02Q13.md
@@ -128,3 +128,5 @@ The Student's t-test would be inappropriate for this analysis because:
     - Severe skewness when proportions approach 0% or 100%
 
 - **Small Sample Size**: Since we only have 10 hospitals to compare, the power is limited. Typically, the sample size have to exceed 15 or 20 in order to ensure reliable results and reduce the influence of outliers or random noise.
+
+reviewed by 黃馨霈 20250527 $\textbf{\textcolor{red}{score: 100}}$
