--- a/史上最強統計學詳解/C15S04Q09.md
+++ b/史上最強統計學詳解/C15S04Q09.md
@@ -25,3 +25,4 @@ They are not the same.
 The reason is that the sign test only considers the sign of the differences but without the consideration of the rank of differences. However, the Wilcoxon signed-rank test involve this informaiton. Therefore it is more powerful than the sign test and it's an improved approach.
 
  
+reviewed by 黃馨霈 20250527 $\textbf{\textcolor{red}{score: 100}}$
