--- a/史上最強統計學詳解/C15S04Q11.md
+++ b/史上最強統計學詳解/C15S04Q11.md
@@ -50,3 +50,5 @@ There is **insufficient evidence** to indicate a difference in the monthly break
 
 ---
 b. One possible reason is that the workload on each machine may vary from month to month.
+
+reviewed by 黃馨霈 20250527 $\textbf{\textcolor{red}{score: 100}}$
