--- a/史上最強統計學詳解/C15S04Q15.md
+++ b/史上最強統計學詳解/C15S04Q15.md
@@ -78,3 +78,5 @@ The third assumption is **not satisfied** because the differences appear skewed 
 Yes, **both the Sign Test and the Wilcoxon Signed-Rank Test lead to the same conclusion**:
 
 There is a statistically significant difference between the recall scores **with imagery** and **without imagery**.
+
+reviewed by 黃馨霈 20250527 $\textbf{\textcolor{red}{score: 100}}$
