--- a/史上最強統計學詳解/C15S05Q06.md
+++ b/史上最強統計學詳解/C15S05Q06.md
@@ -29,3 +29,5 @@ Checking the chi-square table:
 critical value is $X_{3,0.01}^2=11.3449$
 
 Since $H=12.2686$ is larger than the critical value, we reject $H_0$. At least one distrubution is different.  
+
+reviewed by 黃馨霈 20250527 $\textbf{\textcolor{red}{score: 100}}$
