--- a/112705070_YuHanWang/HW0526/C15S06Q10.md
+++ b/112705070_YuHanWang/HW0526/C15S06Q10.md
@@ -3,3 +3,37 @@
 <img width="227" alt="image" src="https://github.com/user-attachments/assets/f08ca726-8ab4-4992-b983-b58dc5a0c1d0" />
 
 ## a
+the randomized block design is used in collecting these data.
+blocks: five children, treatments:four antibiotics
+
+## b
+The normal distribution assumption is satisfied, but the common variance assumption is not satisfied.
+
+## c
+$\ T_1=12 \$  
+$\ T_2 = 13 \$
+$\ T_3 = 10 \$
+$\ T_4 =15 \$
+
+$\ b=5 ,k=4 \$
+
+$\ H_0: \$
+The 4 distributions are identical is different.
+
+$\ H_a: \$
+at least one distribution is different
+
+$\ F^{*}_r = \frac{12}{8 \times 4 \times 5} \sum(12^2+13^2+10^2+15^2)-3 \times 8 \times 5 = 1.56 \$
+
+$\ X^2_{0.05,3} = 7.81473 \$
+
+$\ \because 1.56 < 7.81473 \$
+
+ $\ \therefore \$
+ non-reject
+ $\ H_0 \$
+
+ $\ \Rightarrow \$
+ there is no siginificant difference in the distributions of responses to the tastes of the four antibiotics.
+
+
