--- a/112705070_YuHanWang/HW0526/C15S06Q11.md
+++ b/112705070_YuHanWang/HW0526/C15S06Q11.md
@@ -1,1 +1,41 @@
-<img width="217" alt="image" src="https://github.com/user-attachments/assets/bac3adaa-42f3-48ea-bc4d-85d8caa48e0d" />
+<img width="409" alt="C15 S06 Q11" src="https://github.com/user-attachments/assets/ca40600a-ad15-48a6-a17e-216862911e7c" />    
+
+## a
+$\ H_0:\$
+The distribution of the yields for these five different varieties of wgat are identical.
+
+$\ H_a: \$
+At least one of the distribution of the yields will be different.
+
+$\ T_1=4+2+3+3+3+3=18 \$
+
+$\ T_2=1+3+2+2+2+2=12 \$
+
+$\ T_3=5+4+4+4+4+5=26 \$
+
+$\ T_4=3+5+5+5+5+4=27 \$
+
+$\ T_5=2+1+1+1+1+1=7 \$
+
+$\ F_r=\frac{12}{6 \times 5 \times 6}(18^2+12^2+26^2+27^2+7^2)-3 \times 6 \times 6=20.133 \$
+
+$\ X^2_{4,0.05} = 9.49 \$
+
+$\ \because F_r=20.133>9.49 \$
+
+$\ therefore \$
+reject
+$\ H_0 \$
+
+$\ \Rightarrow \$
+at least one of the distribution of the yields will be different.
+
+## b
+p-value
+$\ p=p(X^2>20.133) <p(X^2>13.28)=0.01 \$
+
+$\ \rightarrow \$
+reject
+$\ H_0 \$
+
+same result.
