--- a/112704036_kc/HW0519/C15S05Q8.md
+++ b/112704036_kc/HW0519/C15S05Q8.md
@@ -1,2 +1,26 @@
 ![image](https://github.com/user-attachments/assets/211475b8-fccb-473a-a58d-739324c87e14)
 
+_____________
+a.
+$T_1 = 263  ;  T_2=210 ; T_3=228 ; T_4=239$
+n=40
+
+1. $H_0$: distributions are same ; $H_a$: at least one distribution is different
+2. ste $\alpha = 0.05$
+3. Test Stastic : $H=\frac{12}{n*(n+1)} * \sum{\frac{T_i^2}{n_i}} - 3 * (n+1)  ~ X^2_{k-1}$
+4. $H^*$=2.63
+5. $X^2_{3,0.05} = 11.345 $  RR:$X^2 > 11.345$
+6. Not reject $H_0$
+
+_____________
+b.
+
+p-value = 0.452<0.05
+
+_______________
+c.
+
+ANOVA : F=0.87, p-value=0.468 
+H=2.63 p-value=0.452
+
+not reject $H_0$
