--- a/112704036_kc/HW0526/C15S06Q10.md
+++ b/112704036_kc/HW0526/C15S06Q10.md
@@ -1,2 +1,22 @@
 ![image](https://github.com/user-attachments/assets/037e6556-5bf7-4f01-abf3-9d9d4d63bdc9)
 ![image](https://github.com/user-attachments/assets/190f7ca4-fe26-4dae-bdf6-ff74b19ab594)
+
+_____________
+a.
+
+Randomized block design
+
+___________
+b.
+
+No, because the variance of the scatter plot of residuals from antibiotic 1 is different from antibiotic 2.
+
+___________
+c.
+
+1. $H_0: T_1=T_2=T_3=T_4$  ; $H_a$ : at least one $T_i$ is different
+2. set $\alpha=0.05$
+3. $F_{rSTAT}=\frac{12}{k *b *(k+1)} *\sum{T_i^2} -3 * b(k+1)$
+4. $F_r=\frac{12}{4* 5* 5} *\sum{12^2+13^2+10^2+15^2} -3 * 5 * 5=1.56$
+5. $X^2_{0.05,3}$ = 7.815 ; RR : $F_r > 7.815 $
+6. Not reject $H_0$
