--- a/112704036_kc/HW0526/C15S06Q11.md
+++ b/112704036_kc/HW0526/C15S06Q11.md
@@ -1,1 +1,16 @@
 ![image](https://github.com/user-attachments/assets/a05f2466-f8db-4dd5-84b4-bb29b2f19012)
+
+____________
+a.
+
+1. $H_0 : T_1=T_2=T_3=T_4=T_5 ; H_a : at least one T_i is different$
+2. set $\alpha =0.05$
+3. $F_{rSTAT}=\frac{12}{b *k * (k+1)} * \sum {T_i^2} - 3 * b * (k+1)$
+4. $F_r^* =\frac{12}{ 6*  5* 6} * (18^2+12^2+26^2+27^2+7^2) - 3 * 6* 6=21.466$
+5. $X^2_{4,0.05}=9.488 ; RR:F_r>9.488$
+6. Reject $H_0$
+
+__________
+b.
+
+because the ANOVA F-teat shows the F= 18.61, p-value=0, that is the same conclusion to reject the $H_0$
