--- a/112704036_kc/HW0526/C15S07Q11.md
+++ b/112704036_kc/HW0526/C15S07Q11.md
@@ -1,1 +1,16 @@
 ![image](https://github.com/user-attachments/assets/baabda3b-049c-43b1-8299-69243e843336)
+
+________
+a.
+
+$r_{s STAT}= 1-\frac{6 * \sum d_i^2}{n * (n^2 -1)}$
+
+$r_s = 1 - \frac{6 * (4.5^2+3^2+...+3.5^2)}{12 * (144 -1)} = -0.587$
+
+_________
+b.
+
+$H_0: p_s =0 , H_a: p_s < 0$
+set $\alpha=0.05$
+$r_{12,0.05}=-0.497$
+RR: $r_s<-0.497$, Reject $H_0$, negative correlation
