--- a/112704036_kc/HW0526/C15S07Q12.md
+++ b/112704036_kc/HW0526/C15S07Q12.md
@@ -1,1 +1,16 @@
 ![image](https://github.com/user-attachments/assets/2488e080-ed7a-4ebe-982a-908c40cceb0b)
+
+_________
+a.
+
+$r_s = 1 - \frac{6 * \sum d_i^2}{9 * (9^2-1)}=1-\frac{6* 2085}{720} = -0.7375$
+
+
+___________
+b.
+
+$H_0 : p_s=0 ; H_a: p_s<0 $
+set $\alpha=0.05$
+$r_{9,0.05}=-0.6$     
+RR: $r_s <-0.6$
+reject $H_0$, negative correlation
