--- a/111652011_Yi-Le/HW0519/C15S04Q11.md
+++ b/111652011_Yi-Le/HW0519/C15S04Q11.md
@@ -4,5 +4,14 @@
 ![image](https://github.com/user-attachments/assets/3323e2f2-d96e-4323-9e5a-d84c57ce67d6)
 
 ## Solution of a
+|Month| 1 | 2 | 3 | 4 | 5 | 6 | 7 | 8 | 9 |
+|-----|---|---|---|---|---|---|---|---|---|
+| A-B |-4 | 2 |-2 |-5 |-3 | 0 | 1 | 1 |-6 |
+| rank| 6 |3.5|3.5| 7 | 5 | X |1.5|1.5| 8 |
+
+$H_0:p = \frac{1}{2}$  
+$H_a:p \neq \frac{1}{2}$  
+$\alpha = 0.05$  
+
 
 ## Solution of b
