--- a/111652011_Yi-Le/HW0519/C15S04Q11.md
+++ b/111652011_Yi-Le/HW0519/C15S04Q11.md
@@ -12,6 +12,11 @@
 $H_0:p = \frac{1}{2}$  
 $H_a:p \neq \frac{1}{2}$  
 $\alpha = 0.05$  
-
+$T^+ = 3.5 + 1.5 + 1.5 = 6.5$  
+$T^- = 6 + 3.5 + 7 + 5 + 8 = 29.5$  
+$T = min(T^+, T^-) = 6.5$  
+$\alpha = 0.05 \quad n = 8$  
+The critical value: 4  
+Thus, the rejection region is $\\{T: T \leq 4 \\}$  
 
 ## Solution of b
