--- a/111652011_Yi-Le/HW0519/C15S04Q11.md
+++ b/111652011_Yi-Le/HW0519/C15S04Q11.md
@@ -18,5 +18,7 @@ $T = min(T^+, T^-) = 6.5$
 $\alpha = 0.05 \quad n = 8$  
 The critical value: 4  
 Thus, the rejection region is $\\{T: T \leq 4 \\}$  
+Since $6.5 > 4$, $H_0$ is not rejected i.e. there is not sufficient evidence to indicate a difference in the monthly breakdown rates for the two machines.
 
 ## Solution of b
+The workload on each machine may vary from month to month.
