--- a/112705070_YuHanWang/HW0526/C15S07Q11.md
+++ b/112705070_YuHanWang/HW0526/C15S07Q11.md
@@ -1,1 +1,34 @@
 <img width="450" alt="image" src="https://github.com/user-attachments/assets/b7f13e9e-fce6-4b6d-8ca7-ac1d5af95a48" />
+
+| Rating ($x_i$) | Rank x | Distance ($y_i$) | Rank y| $d_i = x_i-y_i$ |
+|-------------------|------|---------------------|------|-------------------------|
+| 12                | 7.5  | 75                  | 3    | 7.5 − 3 = **4.5**       |
+| 7                 | 4    | 165                 | 7    | 4 − 7 = **−3**          |
+| 5                 | 3    | 300                 | 12   | 3 − 12 = **−9**         |
+| 19                | 12   | 15                  | 1    | 12 − 1 = **11**         |
+| 17                | 10   | 180                 | 8    | 10 − 8 = **2**          |
+| 12                | 7.5  | 240                 | 11   | 7.5 − 11 = **−3.5**     |
+| 9                 | 6    | 120                 | 4    | 6 − 4 = **2**           |
+| 18                | 11   | 60                  | 2    | 11 − 2 = **9**          |
+| 3                 | 1    | 230                 | 10   | 1 − 10 = **−9**         |
+| 8                 | 5    | 200                 | 9    | 5 − 9 = **−4**          |
+| 15                | 9    | 130                 | 5.5  | 9 − 5.5 = **3.5**       |
+| 4                 | 2    | 130                 | 5.5  | 2 − 5.5 = **−3.5**      |
+
+
+## a
+
+$\ r_s =1-\frac{6}{n(n^2-1)}\sum d_i^2 = 1-\frac{6}{12(12^2-1)}\times 454 = -0.5874 \$
+
+## b
+$\ H_o:\rho_s=0 \$
+
+$\ H_a: \rho_s<0 \$
+
+$\ r_{12,0.05} = -0.497 \$
+
+$\ \because -0.5874<-0.497 \$
+
+$\therefore$ reject $H_o$
+
+$\Rightarrow$ There is sufficient evidence to indicate that that is negative correlation between rating and distance.
