--- a/111652011_Yi-Le/HW0519/C15S05Q6.md
+++ b/111652011_Yi-Le/HW0519/C15S05Q6.md
@@ -1,5 +1,19 @@
-## Question
+ ## Question
 
 ![image](https://github.com/user-attachments/assets/07ccd925-9e5f-45b6-a6a0-58d62e5e56f3)
 
 ## Solution
+
+| Training Period (hours) | 0.5 | 1.0 | 1.5 | 2.0 | 
+|-------------------------|-----|-----|-----|-----|
+|            1            | 13  | 16  |  2  |  2  | 
+|            2            | 20  | 10  | 7.5 | 10  | 
+|            3            | 16  |  5  | 10  |  5  | 
+|            4            | 19  | 13  | 13  |  5  | 
+|            5            | 18  | 16  | 7.5 |  2  |
+|           sum           | 86  | 60  | 40  | 24  | 
+
+$H_0$ : The distribution of times for the four different lengths of instructional time are identical.  
+$H_a$ : At least one lengths of instructional time is in a different distribution.  
+
+$H = =\frac{12}{N(N+1)} \sum(\frac{T_i^2}{n_i}) -3(N+1) = \frac{12}{20(20+1)} (\frac{86^2}{5}+\frac{60^2}{5}+\frac{40^2}{5}+\frac{24^2}{5})-3(20+1) \approx 12.2686$  
