--- a/111652011_Yi-Le/HW0519/C15S05Q6.md
+++ b/111652011_Yi-Le/HW0519/C15S05Q6.md
@@ -16,4 +16,7 @@
 $H_0$ : The distribution of times for the four different lengths of instructional time are identical.  
 $H_a$ : At least one lengths of instructional time is in a different distribution.  
 
-$H = =\frac{12}{N(N+1)} \sum(\frac{T_i^2}{n_i}) -3(N+1) = \frac{12}{20(20+1)} (\frac{86^2}{5}+\frac{60^2}{5}+\frac{40^2}{5}+\frac{24^2}{5})-3(20+1) \approx 12.2686$  
+$H = \frac{12}{N(N+1)} \sum(\frac{T_i^2}{n_i}) -3(N+1) = \frac{12}{20(20+1)} (\frac{86^2}{5}+\frac{60^2}{5}+\frac{40^2}{5}+\frac{24^2}{5})-3(20+1) \approx 12.2686$  
+$\chi^2_{3, 0.01} = 11.3449$  
+Thus, the rejection region is $\\{H: H > 11.3449\\}$  
+Since $12.2686 > 11.3449$, $H_0$ is rejected i.e. at least one distrubution is different.
