--- a/112705070_YuHanWang/HW0526/C15S06Q10.md
+++ b/112705070_YuHanWang/HW0526/C15S06Q10.md
@@ -18,12 +18,12 @@ $\ T_4 =15 \$
 $\ b=5 ,k=4 \$
 
 $\ H_0: \$
-The 4 distributions are identical is different.
+The 4 distributions are identical.
 
 $\ H_a: \$
 at least one distribution is different
 
-$\ F^{*}_r = \frac{12}{8 \times 4 \times 5} \sum(12^2+13^2+10^2+15^2)-3 \times 8 \times 5 = 1.56 \$
+$\ F^{*}_r = \frac{12}{5 \times 4 \times 5} \sum(12^2+13^2+10^2+15^2)-3 \times 5 \times 5 = 1.56 \$
 
 $\ X^2_{0.05,3} = 7.81473 \$
 
